# traxr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: api.md  index.md  metrics.md  operators.md  quickstart.md  security.md  traceable.md
docs/stylesheets/: traxr.css
examples/: README.md  gaia_menu_sales.py  sales.csv
notebooks/: traxr_quickstart.ipynb
scripts/: check_analyzer_goldens.py  check_site_links.py  generate_test_fixtures.py
src/traxr/: __init__.py  cli.py  errors.py  experiment.py  results.py  scoring.py  selfcheck.py  viz.py
src/traxr/agents/: __init__.py  builtin.py  langgraph.py  task.py
src/traxr/capture/: __init__.py  context.py  openai_wrap.py  patch.py
src/traxr/data/: __init__.py  loader.py  sources.py
src/traxr/llm/: __init__.py  openai_compat.py  protocol.py  stub.py  types.py
src/traxr/mas/: __init__.py
src/traxr/mas/agents/: __init__.py  base.py  confidence.py  generalist_agent.py  specialized_agents.py  supervisor_router.py
src/traxr/mas/core/: __init__.py  context_budget.py  episode_spec.py  outputs.py  runner.py  state.py  types.py
src/traxr/mas/planning/: __init__.py  plan_types.py
src/traxr/mas/provenance/: __init__.py  records.py  taint.py  tracker.py
src/traxr/mas/retrieval/: __init__.py  base.py  conditions.py  items.py  keyword_retrieval.py
src/traxr/mas/routing/: __init__.py  base.py  dynamic.py
src/traxr/mas/tools/: __init__.py  audio_tool.py  base.py  calculator_tool.py  corruption.py  document_tool.py  excel_tool.py  image_tool.py  pdf_tool.py  pptx_tool.py  python_tool.py  tool_schema.py  web_fetch_tool.py  web_search_tool.py  zip_tool.py
src/traxr/mas/utils/: __init__.py  code_extraction.py
src/traxr/metrics/: __init__.py  analyzer.py  cost.py  manifest.py
src/traxr/perturb/: __init__.py  audio.py  engine.py  image.py  matrix.py  pdf.py  pdf_inplace.py  tabular.py  types.py
src/traxr/trace/: __init__.py  collector.py  events.py  registry.py
tests/: conftest.py
tests/e2e/: test_builtin_smoke.py  test_external_golden.py  test_golden.py
tests/fixtures/: sample.csv  sample.docx  sample.md  sample.txt  sample.xlsx  truncated.xlsx
tests/fixtures/analyzer_goldens/: empty.json  fully_disjoint.json  identical.json  known_tstar.json  manifest.json  memory_read_count.json  single_edit.json
tests/fixtures/goldens/: builtin_stub.json  external_mock.json
tests/helpers/: _openai_mock.py
tests/integration/: test_experiment_builtin.py  test_experiment_external.py  test_langgraph_adapter.py  test_stub_scenarios.py  test_taint_wiring.py
tests/property/: test_divergence_properties.py  test_perturb_fuzz.py
tests/unit/: _openai_mock.py  test_agent_contract.py  test_analyzer.py  test_analyzer_goldens.py  test_builtin_agent.py  test_capture_async.py  test_capture_context.py  test_capture_instrument.py  test_capture_patch.py  test_capture_streaming.py  test_cli.py  test_cost.py  test_data_loader.py  test_data_sources.py  test_doctests.py  test_errors.py  test_experiment_validation.py  test_llm_boundary.py  test_llm_stub.py  test_manifest.py  test_pdf_inplace.py  test_perturb_document.py  test_perturb_engine.py  test_perturb_matrix.py  test_perturb_result_and_binary_paths.py  test_perturb_tabular.py  test_perturbation_delivery.py  test_provenance_taint.py  test_python_tool.py  test_registry.py  test_results.py  test_scoring.py  test_trace_collector.py  test_trace_events.py  test_viz.py
web/: index.html  style.css
