[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traxr"
version = "1.0.0"
description = "Point your own agent at your own data, run controlled-perturbation experiments, and get back contamination/divergence metrics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Anna Mazhar" }, { name = "Huzaifa Suri" }]
keywords = [
    "multi-agent",
    "llm",
    "tracing",
    "contamination",
    "perturbation",
    "divergence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Core deps stay minimal (stdlib-only for now). instrument() imports openai
# lazily; users bringing an OpenAI-SDK agent already have it installed.
dependencies = []

[project.optional-dependencies]
document = ["PyMuPDF", "pdfplumber", "openpyxl"]
openai = ["openai"]
# Pinned to the CI-exercised range; widen deliberately as new majors are tested.
langgraph = ["langchain-core>=1.0,<2.0", "langgraph>=1.0,<2.0"]
viz = ["matplotlib"]
pandas = ["pandas"]
# Report exporter needs dataframes + plots. Provisional membership — refined
# when results.py lands in M4 (tracked in PROGRESS.md).
report = ["traxr[pandas,viz]"]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "mypy",
    "mutmut",
    "httpx",
    "build",
    # Notebook execution gate (make notebook).
    "nbconvert",
    "ipykernel",
    # Docs site gate (make site).
    "mkdocs-material",
    "mkdocstrings[python]",
    # The built-in reference agent (traxr/mas) needs pandas; its tests run
    # in every dev environment.
    "pandas",
]

[project.scripts]
traxr = "traxr.cli:main"

[project.urls]
Homepage = "https://github.com/anna-mazhar/traxr"
Repository = "https://github.com/anna-mazhar/traxr"
Changelog = "https://github.com/anna-mazhar/traxr/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
# Copied research code, kept verbatim for fidelity (not exported — backlog).
"src/traxr/perturb/image.py" = ["UP", "B", "E501", "I", "F401"]
"src/traxr/perturb/audio.py" = ["UP", "B", "E501", "I", "F401"]
# Long system-prompt string literals; E501 relaxed.
"src/traxr/llm/openai_compat.py" = ["E501"]
# Reference MAS (internal, surfaced via traxr.agents.builtin):
# research-grade code, linted leniently by design.
# F821 hits are string annotations ("ToolSchema") resolved by lazy imports.
"src/traxr/mas/**" = ["UP", "B", "E501", "E741", "I", "F401", "F541", "F821", "F841"]

[tool.ruff.format]
# mas/ keeps its original formatting; excluded from the formatter.
exclude = ["src/traxr/mas/**"]

[tool.mypy]
python_version = "3.10"
files = ["src/traxr"]
strict = true
warn_unused_configs = true

# traxr/mas/ is research code, exercised by integration/golden/smoke
# tests rather than strict typing. Lenient per-module overrides live here (with
# this comment) instead of blanket inline ignores — see the build plan's
# typecheck gate. All curated modules (errors.py, capture/, agents/, llm/,
# experiment.py, results.py, scoring.py, data/, perturb/, metrics/, trace/)
# remain under strict. ignore_errors matches the perturb/image.py precedent:
# the code predates annotations (e.g. `metadata: dict = None` defaults).
[[tool.mypy.overrides]]
module = "traxr.mas.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
ignore_errors = true

# perturb/image.py + perturb/audio.py are copied research code (not exported,
# not documented, not tested — backlog), same rationale as traxr/mas/. Their
# public methods are annotated so strict call sites in engine.py type-check;
# body errors against optional-dep stubs (PIL etc.) are not gated.
[[tool.mypy.overrides]]
module = ["traxr.perturb.image", "traxr.perturb.audio"]
ignore_errors = true

# Optional third-party libs without type stubs.
[[tool.mypy.overrides]]
module = [
    "fitz",
    "pandas",
    "pandas.*",
    "pdfplumber",
    "pdfplumber.*",
    "openpyxl",
    "openpyxl.*",
    "PIL",
    "PIL.*",
    "numpy",
    "pydub",
    "scipy",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# src-layout fallback: keeps the suite importable even where .pth processing
# is unavailable (e.g. macOS can mark the editable-install .pth hidden under
# synced directories, and CPython >= 3.12 skips hidden .pth files).
pythonpath = ["src"]

[tool.coverage.run]
# mas/ (extracted research code) is exercised by integration/golden/smoke
# tests; its coverage is informational, not gated. perturb/image.py +
# perturb/audio.py are copied for fidelity but not exported/tested (backlog) —
# same rationale.
omit = ["*/mas/*", "*/perturb/image.py", "*/perturb/audio.py"]

[tool.mutmut]
# Scoped per the build plan: mutation testing covers the metric/perturbation
# math only (slow; verify-deep + nightly).
source_paths = ["src/traxr/metrics", "src/traxr/perturb"]
# image/audio operators are unexported research code (backlog) — excluded
# from the coverage gates and from mutation alike.
do_not_mutate = ["*/perturb/image.py", "*/perturb/audio.py"]
# The whole package must be importable from the mutants/ sandbox.
also_copy = ["src/traxr", "scripts"]
pytest_add_cli_args_test_selection = ["tests/unit"]
